test/e2e/testdata/xlistenerset-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-xlistener-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: grpc-xlistener-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
    appProtocol: kubernetes.io/h2c
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-xlistener-backend
  namespace: gateway-conformance-infra
  labels:
    app: grpc-xlistener-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-xlistener-backend
  template:
    metadata:
      labels:
        app: grpc-xlistener-backend
    spec:
      containers:
      - name: grpc-xlistener-backend
        image: gcr.io/k8s-staging-gateway-api/echo-basic:v20240412-v1.0.0-394-g40c666fd
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: GRPC_ECHO_SERVER
          value: "1"
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: xlistener-grpcroute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: XListenerSet
    namespace: gateway-conformance-infra
    name: xlistener-set-grpc
    sectionName: extra-grpc
  rules:
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: Echo
    backendRefs:
    - name: grpc-xlistener-backend
      port: 8080
